Bug 178226 - [iOS] Fix -Wunused-lambda-capture warnings in WebCore/WebKit with new clang compiler
Summary: [iOS] Fix -Wunused-lambda-capture warnings in WebCore/WebKit with new clang c...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: David Kilzer (:ddkilzer)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2017-10-12 12:29 PDT by David Kilzer (:ddkilzer)
Modified: 2017-10-12 14:44 PDT (History)
17 users (show)

See Also:


Attachments
Patch v1 (5.92 KB, patch)
2017-10-12 12:35 PDT, David Kilzer (:ddkilzer)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description David Kilzer (:ddkilzer) 2017-10-12 12:29:59 PDT
This tracks a fix for the last of the -Wunused-lambda-capture warnings that only affect iOS builds.
Comment 1 Radar WebKit Bug Importer 2017-10-12 12:30:28 PDT
<rdar://problem/34960668>
Comment 2 David Kilzer (:ddkilzer) 2017-10-12 12:35:39 PDT
Created attachment 323548 [details]
Patch v1
Comment 3 WebKit Commit Bot 2017-10-12 14:44:08 PDT
Comment on attachment 323548 [details]
Patch v1

Clearing flags on attachment: 323548

Committed r223261: <https://trac.webkit.org/changeset/223261>
Comment 4 WebKit Commit Bot 2017-10-12 14:44:10 PDT
All reviewed patches have been landed.  Closing bug.