[iOS] Fix -Wunused-lambda-capture warnings in WebCore/WebKit with new clang compiler <https://webkit.org/b/178226>

Reviewed by Chris Fleizach.

Source/WebCore:

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper _accessibilityArticleAncestor]):
- Remove unused lambda variable 'self'.

Source/WebKit:

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView changeSelectionWithTouchAt:withSelectionTouch:baseIsStart:withFlags:]):
- Remove unused lambda variable 'touch' which was also passed as
  an argument.
(-[WKContentView changeSelectionWithTouchesFrom:to:withGesture:withState:]):
- Remove unused lambda variable 'gestureState' which was also
  passed as an argument.
(-[WKContentView _simulateLongPressActionAtLocation:]):
- Remove unused lambda variable 'location'.


Canonical link: https://commits.webkit.org/194478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223261 268f45cc-cd09-0410-ab3c-d52691b4dbfc