Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm
@@ -560,7 +560,7 @@ static AccessibilityObjectWrapper* AccessibilityUnignoredAncestor(AccessibilityO
 
 - (AccessibilityObjectWrapper*)_accessibilityArticleAncestor
 {
-    if (const AccessibilityObject* parent = AccessibilityObject::matchedParent(*m_object, false, [self] (const AccessibilityObject& object) {
+    if (const AccessibilityObject* parent = AccessibilityObject::matchedParent(*m_object, false, [] (const AccessibilityObject& object) {
         return object.roleValue() == DocumentArticleRole;
     }))
         return parent->wrapper();
